--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_HOST.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_HOST.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_ORACLEJDBC_HOST'] then puts "${oracle.db.host}" else ENV['OPENSHIFT_ORACLEJDBC_host'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_HOST'] or ENV['OPENSHIFT_ORACLEJDBC_HOST'].empty?) then puts "${oracle.db.host}" else ENV['OPENSHIFT_ORACLEJDBC_host'] end %>
