--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PASSWORD.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PASSWORD.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_ORACLEJDBC_PASSWORD'] then puts "${oracle.db.password}" else ENV['OPENSHIFT_ORACLEJDBC_PASSWORD'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_PASSWORD'] or ENV['OPENSHIFT_ORACLEJDBC_PASSWORD'].empty?) then puts "${oracle.db.password}" else ENV['OPENSHIFT_ORACLEJDBC_PASSWORD'] end %>
