--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PORT.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PORT.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_ORACLEJDBC_PORT'] then puts "${oracle.db.port}" else ENV['OPENSHIFT_ORACLEJDBC_PORT'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_PORT'] or ENV['OPENSHIFT_ORACLEJDBC_PORT'].empty?) then puts "${oracle.db.port}" else ENV['OPENSHIFT_ORACLEJDBC_PORT'] end %>
