--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_USERNAME.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_USERNAME.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] then puts "${oracle.db.username}" else ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] or ENV['OPENSHIFT_ORACLEJDBC_USERNAME'].empty?) then puts "${oracle.db.username}" else ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] end %>
