Reorganised handling of modules, adding instructions for OSE 2.1.

--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_HOST.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_HOST.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_ORACLEJDBC_HOST'] or ENV['OPENSHIFT_ORACLEJDBC_HOST'].empty?) then "${oracle.db.host}" else ENV['OPENSHIFT_ORACLEJDBC_host'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_HOST'] or ENV['OPENSHIFT_ORACLEJDBC_HOST'].empty?) then ENV['OPENSHIFT_ORACLEJDBC_HOST'] = "${oracle.db.host}" end ; ENV['OPENSHIFT_ORACLEJDBC_HOST'] %>
