--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_USERNAME.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_USERNAME.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] or ENV['OPENSHIFT_ORACLEJDBC_USERNAME'].empty?) then "${oracle.db.username}" else ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] or ENV['OPENSHIFT_ORACLEJDBC_USERNAME'].empty?) then ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] = "${oracle.db.username}" end ; ENV['OPENSHIFT_ORACLEJDBC_USERNAME'] %>
