--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_JNDINAME.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_JNDINAME.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'] or ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'].empty?) then "${oracle.db.jndiName}" else ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'] or ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'].empty?) then ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'] = "${oracle.db.jndiName}" end ; ENV['OPENSHIFT_ORACLEJDBC_JNDINAME'] %>
