--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PORT.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_PORT.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_ORACLEJDBC_PORT'] or ENV['OPENSHIFT_ORACLEJDBC_PORT'].empty?) then "${oracle.db.port}" else ENV['OPENSHIFT_ORACLEJDBC_PORT'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_PORT'] or ENV['OPENSHIFT_ORACLEJDBC_PORT'].empty?) then ENV['OPENSHIFT_ORACLEJDBC_PORT'] = "${oracle.db.port}" end ; ENV['OPENSHIFT_ORACLEJDBC_PORT'] %>
