--- a/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_SCHEMANAME.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_ORACLEJDBC_SCHEMANAME.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'] or ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'].empty?) then "${oracle.db.schemaName}" else ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'] end %>
+<%= if (not ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'] or ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'].empty?) then ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'] = "${oracle.db.schemaName}" end ; ENV['OPENSHIFT_ORACLEJDBC_SCHEMANAME'] %>
